# JinxCore

./: Cargo.toml  README.md
src/: antispam.rs  branding.rs  chatfilter.rs  chatformat.rs  config.rs  discord_bot.rs  lib.rs  metrics.rs  scoreboard.rs  seen.rs  webhook.rs
src/commands/: calc.rs  clearchat.rs  clearinv.rs  coords.rs  credits.rs  discord.rs  feed.rs  flip.rs  fly.rs  gma.rs  gmc.rs  gms.rs  gmsp.rs  god.rs  heal.rs  health.rs  help.rs  i.rs  kit.rs  me.rs  mod.rs  near.rs  online.rs  ping.rs  pl.rs  playtime.rs  reload.rs  rules.rs  seen.rs  socials.rs  socials_common.rs  speed.rs  starterkit.rs  store.rs  suicide.rs  time.rs  tps.rs  uptime.rs  weather.rs  website.rs  (+1 more)
